Relationship/src/Wrapterms.jj
/*  Wrapterms.jj  -  It wraps terms to SPARQL query */
options {
  DEBUG_PARSER = false;
  DEBUG_TOKEN_MANAGER = false;
  STATIC = true;
}
PARSER_BEGIN(Wrapterms)
//package myJavacc;
import java.io.*;
import myClasses.*; 
public class Wrapterms {
   
   public static void main(String args[])  throws ParseException  {
      Wrapterms parser = null;
      try {
         parser = new Wrapterms(new FileInputStream("terms.txt"));
         ListConcept originalList = new ListConcept();
         Wrapterms.start(originalList);
         System.out.println(originalList);
      }
      catch(FileNotFoundException e) {
         System.out.println("Err: file not found");
      }
      catch(TokenMgrError e) {
         System.out.println("Lexical err\n" + e.getMessage());
      }
      catch(ParseException e) {
         System.out.println("Sintax err\n" + e.getMessage());
      }
   }
}
PARSER_END(Wrapterms)
TOKEN : {
      < CHARACTER:  ["a"-"z","A"-"Z","0"-"9","-","_"] > |
      < TERM:       < CHARACTER > 
                    (
                      ( < CHARACTER > | " " )*
                      < CHARACTER >
                    )?
      > |
      < SEPARATORS:  ( "\n" | "\r" | "," | ";" | "/" | " " )+ >
}
/* Gramar:
start   ->  ( element() )*  < EOF > 
element ->  < TERM > ( < SEPARATORS > )*
*/

void start(ListConcept originalList) : {} 
{
   ( element(originalList) )* < EOF >
}
void element(ListConcept originalList) : {Token token; Concept concept;}  
{
	token = < TERM >
    {		concept = new Concept(token);
		originalList.insert(concept);			
    }
    ( < SEPARATORS > )*
}

